src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_diamond.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Diamond ─────────────────────────────────────────────────────────────────────┐
│                    ┌ Left ────┐                                              │
│                ────│● Healthy │────│                                         │
│                │   └──────────┘    │                                         │
│┌ Source ──┐    │                   │   ┌ Sink ────┐                          │
││● Healthy │    │                   │   │✖ Down    │                          │
│└──────────┘────│                   ────└──────────┘                          │
│                │                   │                                         │
│                │   ┌ Right ───┐    │                                         │
│                ────│▲ Degraded│────│                                         │
│                    └──────────┘                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
