src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_edge_styles.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                    ┌ B ───────┐                                              │
│                ─ ──│● Healthy │                                              │
│                    └──────────┘                                              │
│┌ A ───────┐    │                                                             │
││● Healthy │    │                                                             │
│└──────────┘·····                                                             │
│                ·                                                             │
│                ·   ┌ C ───────┐                                              │
│                ····│● Healthy │                                              │
│                    └──────────┘                                              │
└──────────────────────────────────────────────────────────────────────────────┘
