src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_linear_graph.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Linear ──────────────────────────────────────────────────────────────────────┐
│┌ API ─────┐        ┌ Database ┐                                              │
││● Healthy │────────│▲ Degraded│                                              │
│└──────────┘        └──────────┘                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
