src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_rounded_nodes.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│╭ API Gateway ╮        ╭ Database ╮                       │
││● Healthy    │────────│● Healthy │                       │
│╰─────────────╯        ╰──────────╯                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
