src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_single_node.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Service Graph ───────────────────────────────────────────┐
│┌ API Gateway ┐                                           │
││● Healthy    │                                           │
│└─────────────┘                                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
