src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_top_to_bottom.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Vertical ────────────────────────────┐
│┌ Top ─────┐                          │
││● Healthy │                          │
│└──────────┘                          │
│      │                               │
│      │                               │
│      │                               │
│      │                               │
│      │                               │
│      │                               │
│      │                               │
│      │                               │
│┌ Bottom ──┐                          │
││● Healthy │                          │
│└──────────┘                          │
└──────────────────────────────────────┘
