src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_with_selection.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│┌ API ─────┐        ┌ DB ──────┐                          │
││● Healthy │────────│● Healthy │                          │
│└──────────┘        └──────────┘                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ api API [● Healthy]                                      │
└──────────────────────────────────────────────────────────┘
