src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__snapshot_with_statuses.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│┌ Healthy ─┐        ┌ Degraded ┐        ┌ Down ────┐        ┌ Unknown ─┐      │
││● Healthy │────────│▲ Degraded│────────│✖ Down    │────────│? Unknown │      │
│└──────────┘        └──────────┘        └──────────┘        └──────────┘      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
