src/component/diagram/snapshots/envision__component__diagram__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/diagram/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ API ─────┐                            
│● Healthy │                            
└──────────┘
